--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Learn. Build. Evangelize.
+title: Learn. Evangelize.
 subtitle: This is my story and where I hope to go
 ---
 
