--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: My Website
-subtitle: This is my story and where I hope to go
+title: Who Am I?
+subtitle: Learn. Build. Evangelize
 ---
 
